# remote-command

./: .gitattributes  .gitignore  CMakeLists.txt  README (KR).md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
include/: remote_command_client.hpp  remote_command_server.hpp
prj/: CMakeLists.txt  main.cpp  run.sh
src/client/: remote_command_client.cpp
src/protocol/: remote_command_protocol.hpp
src/server/: remote_command_server.cpp  remote_command_server_command.cpp  remote_command_server_command.hpp  remote_command_server_context.hpp  remote_command_server_discovery.cpp  remote_command_server_discovery.hpp  remote_command_server_helper.hpp  remote_command_server_process.cpp  remote_command_server_process.hpp  remote_command_server_socket.cpp  remote_command_server_socket.hpp  remote_command_server_stream.cpp  remote_command_server_stream.hpp
test/: integration.cpp
